--- a/src/python/grapl-notebook/Dockerfile
+++ b/src/python/grapl-notebook/Dockerfile
@@ -1,8 +1,16 @@
-FROM jupyter/minimal-notebook
+FROM grapl/grapl-python-build:latest AS grapl-notebook
+USER grapl
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+EXPOSE 8888
+WORKDIR /home/grapl
+# Set up virtualenv
+COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
+RUN /bin/bash -c "source venv/bin/activate && pip install jupyter"
 
-RUN pip install --user --upgrade grapl_analyzerlib
-COPY ./jupyter_notebook_config.py /home/jovyan/.jupyter/jupyter_notebook_config.py
-COPY ./Demo_Engagement.ipynb /home/jovyan/
-RUN mkdir -p /home/jovyan/model_plugins
+# Set up jupyter-notebook stuff
+RUN mkdir -p /home/grapl/grapl-notebook/model_plugins
+COPY --chown=grapl ./jupyter_notebook_config.py /home/grapl/.jupyter/
+COPY --chown=grapl ./Demo_Engagement.ipynb /home/grapl/grapl-notebook/
 
-CMD jupyter notebook
+# Run it
+CMD source venv/bin/activate && cd grapl-notebook && jupyter notebook --ip="0.0.0.0"
