Fix EngagementView.get_or_create; enable analyzerlib python typechecking in CI (#479)
* Wrote a test showing that engagement view is wrong

* bitch i dont know if this works or not

* typecheck works cool

* cool

--- a/src/python/grapl_analyzerlib/pytype.cfg
+++ b/src/python/grapl_analyzerlib/pytype.cfg
@@ -4,8 +4,7 @@
 
 # Space-separated list of files or directories to exclude.
 exclude =
-    **/*_test.py
-    **/test_*.py
+    test2.py  # just a super busted old test class
 
 # Space-separated list of files or directories to process.
 inputs = grapl_analyzerlib
