Integration testing Cypress (#482)
* add test/, proof-of-concept for Cypress browser-driven integration tests

* fix network for js integration tests

* don't record video of Cypress browser tests

* change 'TODO: js integration tests' into actual js integration tests

* operationalize Cypress, add login test, dump screenshots & video to local

* remove boilerplate cypress comments, & annotate a startup workaround about dockerized-Cypress-w/-Chrome

* update gitignore to actually match integration test diagnostic outputs directory

Co-authored-by: wimax-grapl <69007229+wimax-grapl@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 src/js/grapl-cdk/edge_ux_package/*
 src/rust/graph-descriptions/grapl_graph_descriptions
 
+# Mac OS
+.DS_Store
+
+# Test outputs
+/test/integration-outputs/**/*
+
 grapl-cdk/cdk.out/
 lambda/
 __pycache__/
