--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -9,8 +9,7 @@ grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
 grapl-config = {path = "../../grapl-config", version="*"}
 grapl-observe = {path = "../../grapl-observe", version="*"}
 
-#sqs-lambda = "0.20.*"
-sqs-lambda = {path = "../../../../../sqs-lambda"}
+sqs-lambda = "0.21.*"
 serde = "1.0.110"
 serde_json = "1.0.53"
 serde_derive = "1.0.110"
