--- a/src/rust/generators/graph-generator-lib/Cargo.toml
+++ b/src/rust/generators/graph-generator-lib/Cargo.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0"
 grapl-graph-descriptions = { path="../../graph-descriptions", version="0.2.*" }
 
 failure = "0.1.*"
-sqs-lambda = "0.21.0"
+sqs-lambda = "0.21.*"
 
 sha2 = "0.7.1"
 rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
