Move all of the Rust services over to sqs-lambda

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -13,4 +13,5 @@ members = [
     "./generators/generic-subgraph-generator",
     "./generators/osquery-subgraph-generator",
     "./generators/sysmon-subgraph-generator",
+    "./sqs-lambda",
 ]
