--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -68,6 +68,11 @@ RUN mkdir -p grapl-observe/src
 RUN touch grapl-observe/src/lib.rs
 COPY --chown=grapl ./grapl-observe/Cargo.toml grapl-observe/
 
+# copy in Cargo.toml for sqs-lambda
+RUN mkdir -p sqs-lambda/src
+RUN touch sqs-lambda/src/lib.rs
+COPY --chown=grapl ./sqs-lambda/Cargo.toml sqs-lambda/
+
 # copy in Cargo.toml for metric-forwarder
 RUN mkdir -p metric-forwarder/src
 RUN echo 'fn main() {}' > metric-forwarder/src/main.rs 
@@ -123,6 +128,7 @@ RUN rm -rf target/*/*/.fingerprint/graph-merger*
 RUN rm -rf target/*/*/.fingerprint/grapl-config*
 RUN rm -rf target/*/*/.fingerprint/grapl-graph-descriptions*
 RUN rm -rf target/*/*/.fingerprint/grapl-observe*
+RUN rm -rf target/*/*/.fingerprint/sqs-lambda*
 RUN rm -rf target/*/*/.fingerprint/metric-forwarder*
 RUN rm -rf target/*/*/.fingerprint/node-identifier*
 RUN rm -rf target/*/*/.fingerprint/sysmon-subgraph-generator*
@@ -134,6 +140,7 @@ COPY --chown=grapl ./graph-descriptions graph-descriptions
 COPY --chown=grapl ./graph-merger graph-merger
 COPY --chown=grapl ./grapl-config grapl-config
 COPY --chown=grapl ./grapl-observe grapl-observe
+COPY --chown=grapl ./sqs-lambda sqs-lambda
 COPY --chown=grapl ./metric-forwarder metric-forwarder
 COPY --chown=grapl ./node-identifier node-identifier
 COPY --chown=grapl ./generators/graph-generator-lib generators/graph-generator-lib
