--- a/src/python/analyzer_executor/requirements.txt
+++ b/src/python/analyzer_executor/requirements.txt
@@ -1,8 +1,9 @@
-pydgraph==20.7.*
+pydgraph==20.7.0
 boto3
-grapl-analyzerlib==0.2.*
+grapl-analyzerlib==0.2.71
 redis
 grpcio
 protobuf
 typing_extensions
 hypothesis
+grapl-common
