--- a/src/python/graplctl/pyproject.toml
+++ b/src/python/graplctl/pyproject.toml
@@ -1,14 +1,20 @@
 [tool.poetry]
 name = "graplctl"
 version = "0.1.0"
-description = ""
+description = "CLI tool to operate Grapl"
 authors = ["jgrillo <jgrillo@graplsecurity.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+click = "^7.1.2"
+boto3 = "^1.16.35"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+mypy = "^0.790"
+
+[tool.poetry.scripts]
+graplctl = "graplctl:cli.main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
