--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -25,6 +25,7 @@
     "minimist": "^1.2.3",
     "prettier": "2.0.3",
     "react": "^16.13.1",
+    "react-async-hook": "^3.6.2",
     "react-dom": "^16.13.1",
     "react-force-graph": "^1.32.1",
     "react-router-dom": "^5.2.0",
