Add metrics to graph-merger (#495)
* Add metrics to graph-merger

* Log metric failures

* Cargo fmt

* Remove dup import

Co-authored-by: wimax-grapl <69007229+wimax-grapl@users.noreply.github.com>

--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 grapl-graph-descriptions = { path="../graph-descriptions", version="*"}
 grapl-config = {path="../grapl-config", version="*"}
-grapl-observe = {path="../grapl-observe/"}
+grapl-observe = {path="../grapl-observe", version="*"}
 anyhow = "1.0.*"
 failure = "0.1.*"
 serde = "1.0.110"
