--- a/src/js/grapl-cdk/.gitignore
+++ b/src/js/grapl-cdk/.gitignore
@@ -3,6 +3,12 @@
 *.d.ts
 node_modules
 
+# This is generated from `edge_ux_pre_replace` at `deploy_all.sh` time.
+edge_ux_post_replace/*
+# This is the old name of `edge_ux_post_replace`; many developers' machines likely still have this
+# artifact.
+edge_ux_package/*
+
 # CDK asset staging directory
 .cdk.staging
 cdk.out
@@ -15,4 +21,7 @@ cdk.out
 cdk-output.json
 
 # do not ignore our UX
-!edge_ux/**/*.js
+!edge_ux_pre_replace/**/*.js
+
+# Doesn't appear to exist anymore
+index.js
