--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -14,4 +14,5 @@ members = [
     "./generators/osquery-subgraph-generator",
     "./generators/sysmon-subgraph-generator",
     "./sqs-lambda",
+    "./sqs-executor",
 ]
