--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -28,6 +28,7 @@
     "@aws-cdk/aws-dynamodb": "1.71.0",
     "@aws-cdk/aws-ec2": "1.71.0",
     "@aws-cdk/aws-ecs": "1.71.0",
+    "@aws-cdk/aws-ecs-patterns": "1.71.0",
     "@aws-cdk/aws-elasticache": "1.71.0",
     "@aws-cdk/aws-events-targets": "1.71.0",
     "@aws-cdk/aws-iam": "1.71.0",
