--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -9,7 +9,8 @@ grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
 grapl-config = {path = "../../grapl-config", version="*"}
 grapl-observe = {path = "../../grapl-observe", version="*"}
 
-sqs-lambda = { path = "../../sqs-lambda/" }
+#sqs-lambda = { path = "../../sqs-lambda/" }
+sqs-executor = { path = "../../sqs-executor/" }
 serde = "1.0.110"
 serde_json = "1.0.53"
 serde_derive = "1.0.110"
@@ -41,6 +42,7 @@ graph-generator-lib = { path="../graph-generator-lib", version="*"}
 tracing = "0.1.15"
 tracing-subscriber = "0.2.5"
 tracing-futures = "0.2.4"
+thiserror = "1.0.22"
 
 
 [dependencies.uuid]
