--- a/src/rust/generators/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/generic-subgraph-generator/Cargo.toml
@@ -9,8 +9,8 @@ graph-generator-lib = {path = "../graph-generator-lib/", version="*"}
 grapl-graph-descriptions = { path="../../graph-descriptions", version="*"}
 grapl-config = {path="../../grapl-config", version="*"}
 
-sqs-executor = { path = "../../sqs-executor/" }
-#sqs-lambda = { path = "../../sqs-lambda/" }
+#sqs-executor = { path = "../../sqs-executor/" }
+sqs-lambda = { path = "../../sqs-lambda/" }
 grapl-observe = { path = "../../grapl-observe/" }
 serde = "1.0.110"
 serde_json = "1.0.53"
