--- a/src/rust/sqs-executor/Cargo.toml
+++ b/src/rust/sqs-executor/Cargo.toml
@@ -28,3 +28,6 @@ tracing-futures = "0.2.4"
 futures-util = "0.3.8"
 uuid = {version = "0.8.1", features=["v4"]}
 futures = "0.3.8"
+darkredis = "0.7.0"
+num_cpus = "1.13.0"
+hex = "0.4.2"
