--- a/src/rust/node-identifier/Cargo.toml
+++ b/src/rust/node-identifier/Cargo.toml
@@ -45,7 +45,7 @@ stopwatch = "0.0.7"
 
 zstd = "0.5.1"
 futures = "0.3.*"
-sqs-lambda = { path = "../sqs-lambda/" }
+sqs-executor = { path = "../sqs-executor/" }
 
 aws_lambda_events = "0.2.0"
 
@@ -61,6 +61,7 @@ tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "r
 hmap = "0.1.0"
 tracing = "0.1.13"
 chrono = "0.4.11"
+thiserror = "1.0.23"
 
 [dependencies.uuid]
 version = "0.6.*"
