--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -17,14 +17,13 @@ log = "0.4.*"
 
 dgraph-tonic = { version = "0.8", features = ["dgraph-1-1"] }
 grpc = "0.6.1"
-sqs-lambda = { path = "../sqs-lambda/" }
+sqs-executor = { path = "../sqs-executor/" }
 
 rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_sns = { version="0.45.0", default_features = false, features=["rustls"] }
 
-lambda_runtime = "0.2.*"
 aws_lambda_events = "0.2.0"
 
 simple_logger = "1.6.*"
@@ -47,3 +46,4 @@ chrono = "0.4.11"
 rusoto_credential = "0.45.0"
 rusoto_dynamodb = {version="0.45.0", default_features = false, features=["rustls"]}
 serde_dynamodb = {version="0.6", default_features = false, features=["rustls"]}
+thiserror = "1.0.23"
