--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -11,8 +11,10 @@ grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
 grapl-config = { path = "../../grapl-config", version="*" }
 grapl-observe = { path = "../../grapl-observe", version="*" }
 graph-generator-lib = { path="../graph-generator-lib", version="*" }
+grapl-service = { path = "../../grapl-service" }
 
-sqs-lambda = { path = "../../sqs-lambda/" }
+
+sqs-executor = { path = "../../sqs-executor/" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 failure = "0.1.*"
@@ -28,3 +30,5 @@ async-trait = "0.1.31"
 zstd = "0.5.1"
 tokio-compat = "0.1.*"
 tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded", "fs"] }
+thiserror = "1.0.23"
+tracing = "0.1.22"
