--- a/src/rust/grapl-config/Cargo.toml
+++ b/src/rust/grapl-config/Cargo.toml
@@ -16,6 +16,9 @@ grapl-observe = { path = "../grapl-observe/" }
 rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_dynamodb = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_cloudwatch = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_credential = { version="0.45.0", default_features = false }
 
 tracing = "0.1.15"
 tracing-subscriber = "0.2.5"
