--- a/docker-compose.unit-tests.yml
+++ b/docker-compose.unit-tests.yml
@@ -8,6 +8,10 @@ services:
 
   grapl-rust-test:
     image: grapl/rust-base:${TAG:-latest}
+    build:
+      context: src/rust
+      dockerfile: Dockerfile.Makefile
+      target: base
     volumes: 
       - ./src/rust:/grapl
     working_dir: /grapl
@@ -20,30 +24,62 @@ services:
 
   grapl-graph-descriptions-test:
     image: grapl/grapl-graph-descriptions-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: graph-descriptions-test
 
   grapl-common-test:
     image: grapl/grapl-grapl-common-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: grapl-common-test
 
   grapl-analyzerlib-test:
     image: grapl/grapl-analyzerlib-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: grapl-analyzerlib-test
 
   # grapl-analyzer-deployer:
   #   image: grapl/grapl-analyzer-deployer-test:${TAG:-latest}
 
   grapl-analyzer-executor-test:
     image: grapl/grapl-analyzer-executor-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: analyzer-executor-test
 
   grapl-engagement-creator-test:
     image: grapl/grapl-engagement-creator-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: engagement-creator-test
 
   grapl-engagement-edge-test:
     image: grapl/grapl-engagement-edge-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: engagement-edge-test
 
   grapl-model-plugin-deployer-test:
     image: grapl/grapl-model-plugin-deployer-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: model-plugin-deployer-test
 
   grapl-dgraph-ttl-test:
     image: grapl/grapl-dgraph-ttl-test:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: dgraph-ttl-test
 
   #
   # JS/web services
@@ -51,11 +87,19 @@ services:
 
   grapl-engagement-view-test:
     image: grapl/grapl-engagement-view-build:${TAG:-latest}
+    build: 
+      context: src/js/engagement_view
+      dockerfile: Dockerfile.Makefile
+      target: engagement-view-build
 
   # grapl-graphql-endpoint:
   #   image: grapl/grapl-graphql-endpoint-test:${TAG:-latest}
 
   grapl-notebook-test:
     image: grapl/grapl-notebook-test:${TAG:-latest}
+    build: 
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: grapl-notebook-test
     volumes:
       - ./etc:/grapl-etc:ro
