--- a/docker-compose.Makefile.yml
+++ b/docker-compose.Makefile.yml
@@ -96,6 +96,10 @@ services:
 
   grapl-metric-forwarder:
     image: grapl/grapl-metric-forwarder:${TAG:-latest}
+    build:
+      context: src/rust/target/x86_64-unknown-linux-musl
+      dockerfile: ../../Dockerfile.Makefile
+      target: metric-forwarder-deploy
     tty: false
     environment:
       - "IS_LOCAL=True"
@@ -106,6 +110,10 @@ services:
 
   grapl-sysmon-subgraph-generator:
     image: grapl/grapl-sysmon-subgraph-generator:${TAG:-latest}
+    build:
+      context: src/rust/target/x86_64-unknown-linux-musl
+      dockerfile: ../../Dockerfile.Makefile
+      target: sysmon-subgraph-generator-deploy
     tty: false
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -127,6 +135,10 @@ services:
 
   grapl-osquery-subgraph-generator:
     image: grapl/grapl-osquery-subgraph-generator:${TAG:-latest}
+    build:
+      context: src/rust/target/x86_64-unknown-linux-musl
+      dockerfile: ../../Dockerfile.Makefile
+      target: osquery-subgraph-generator-deploy
     tty: false
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -148,6 +160,10 @@ services:
 
   grapl-node-identifier:
     image: grapl/grapl-node-identifier:${TAG:-latest}
+    build:
+      context: src/rust/target/x86_64-unknown-linux-musl
+      dockerfile: ../../Dockerfile.Makefile
+      target: node-identifier-deploy
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
@@ -181,6 +197,10 @@ services:
 
   grapl-node-identifier-retry-handler:
     image: grapl/grapl-node-identifier-retry-handler:${TAG:-latest}
+    build:
+      context: src/rust/target/x86_64-unknown-linux-musl
+      dockerfile: ../../Dockerfile.Makefile
+      target: node-identifier-retry-handler-deploy
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
@@ -214,6 +234,10 @@ services:
 
   grapl-graph-merger:
     image: grapl/grapl-graph-merger:${TAG:-latest}
+    build:
+      context: src/rust/target/x86_64-unknown-linux-musl
+      dockerfile: ../../Dockerfile.Makefile
+      target: graph-merger-deploy
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
@@ -240,6 +264,10 @@ services:
 
   grapl-analyzer-dispatcher:
     image: grapl/grapl-analyzer-dispatcher:${TAG:-latest}
+    build:
+      context: src/rust/target/x86_64-unknown-linux-musl
+      dockerfile: ../../Dockerfile.Makefile
+      target: analyzer-dispatcher-deploy
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
@@ -284,6 +312,10 @@ services:
 
   grapl-analyzer-executor:
     image: grapl/grapl-analyzer-executor:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: analyzer-executor-deploy
     command: /bin/sh -c '. venv/bin/activate && python3 analyzer_executor/src/run_local.py'
     environment:
       - "HITCACHE_ADDR=dev-shared-redis"
@@ -309,6 +341,10 @@ services:
 
   grapl-engagement-creator:
     image: grapl/grapl-engagement-creator:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: engagement-creator-deploy
     command: /bin/sh -c '. venv/bin/activate && python3 engagement-creator/src/engagement-creator.py'
     environment:
       - "IS_LOCAL=True"
@@ -327,13 +363,16 @@ services:
 
   grapl-engagement-edge:
     image: grapl/grapl-engagement-edge:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: engagement-edge-deploy
     command: |
       /bin/sh -c '
         wait-for-it grapl-provision:8126 --timeout=45 &&
         . venv/bin/activate &&
         cd app &&
-        chalice local --no-autoreload --host=0.0.0.0 --port=8900
-      '
+        chalice local --no-autoreload --host=0.0.0.0 --port=8900'
     ports:
       - "8900:8900"
     environment:
@@ -352,6 +391,10 @@ services:
 
   grapl-model-plugin-deployer:
     image: grapl/grapl-model-plugin-deployer:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: model-plugin-deployer-deploy
     command: /bin/sh -c '. venv/bin/activate && cd app && chalice local --no-autoreload --host=0.0.0.0 --port=8123'
     ports:
       - "8123:8123"
@@ -373,6 +416,10 @@ services:
 
   grapl-dgraph-ttl:
     image: grapl/grapl-dgraph-ttl:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: dgraph-ttl-deploy
     command: /bin/sh -c '. venv/bin/activate && cd app && chalice local --no-autoreload --host=0.0.0.0 --port=8124'
     ports:
       - "8124:8124"
@@ -404,6 +451,10 @@ services:
 
   grapl-graphql-endpoint:
     image: grapl/grapl-graphql-endpoint:${TAG:-latest}
+    build: 
+      context: src/js/graphql_endpoint
+      dockerfile: Dockerfile.Makefile
+      target: graphql-endpoint-deploy
     command: yarn start server
     environment:
       - MG_ALPHAS=master_graph:9080
@@ -418,6 +469,10 @@ services:
 
   grapl-notebook:
     image: grapl/grapl-notebook:${TAG:-latest}
+    build: 
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: grapl-notebook
     user: grapl
     environment:
       - MG_ALPHAS=master_graph:9080
@@ -432,6 +487,10 @@ services:
 
   grapl-provision:
     image: grapl/grapl-provision:${TAG:-latest}
+    build: 
+      context: src
+      dockerfile: ./python/Dockerfile.Makefile
+      target: grapl-provision
     command: |
       /bin/bash -c "
         # it doesn't seem to like waiting for sqs
