Might be throwaway wokr, but, added an empty grapl-service-common

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "./graph-merger",
     "./grapl-config",
     "./grapl-observe",
+    "./grapl-service-common",
     "./metric-forwarder",
     "./node-identifier",
     "./generators/graph-generator-lib",
